src/objects/CCM_Orientation__c.object
<CustomObject>
    <fields>
        <fullName>Absence_of_organized_activities__c</fullName>
        <inlineHelpText>Absence of recent participation in any organized activity?</inlineHelpText>
        <label>Absence of organized activities?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AssessmentContainerId__c</fullName>
        <label>AssessmentContainerId</label>
        <referenceTo>AssessmentContainer__c</referenceTo>
        <relationshipName>CCM_Orientation_Assessments1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Does_your_partner_endanger_your_health__c</fullName>
        <inlineHelpText>Does your intimate partner prevent you from eating or sleeping, or endanger your health in other ways?</inlineHelpText>
        <label>Does your partner endanger your health?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Drugs_Used_Other__c</fullName>
        <label>Drugs Used (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drugs_Used__c</fullName>
        <description>Copied to Contact when assessment complete: Substance AbuseCopied from Contact when Assessment saved until completion: Psychosocial</description>
        <inlineHelpText>Check any substances ever used by participant.</inlineHelpText>
        <label>Drugs Used</label>
        <picklist>
            <picklistValues>
                <fullName>Alcohol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphetamines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphetamines - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphetamines - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphetamines - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benzodiazepines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benzodiazepines - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benzodiazepines - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benzodiazepines - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crack Cocaine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crack Cocaine - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crack Cocaine - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crack Cocaine - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecstasy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecstasy - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecstasy - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecstasy - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogens - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogens - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogens - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inhalants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inhalants - Mild</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Family_Background__c</fullName>
        <inlineHelpText>Describe family background (ethnicity, place of birth, where raised and by whom, current significant familial relationships, who does participant live with now?). Note LSCMI questions re: positive family relationships.</inlineHelpText>
        <label>Family Background</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feel_afraid_at_home__c</fullName>
        <inlineHelpText>Is there anything that goes on at home that makes you feel afraid?</inlineHelpText>
        <label>Feel afraid at home?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Has_your_intimate_partner_ever_hurt_you__c</fullName>
        <inlineHelpText>Has your intimate partner ever hurt or threatened you?</inlineHelpText>
        <label>Has your intimate partner ever hurt you?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Has_your_partner_ever_pushed_hit_you__c</fullName>
        <inlineHelpText>Has your intimate partner ever pushed, slapped, hit or hurt you in some way?</inlineHelpText>
        <label>Has your partner ever pushed/hit you?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Has_your_partner_taken_hurt_your_kids__c</fullName>
        <inlineHelpText>Has your intimate partner taken the children without permission, threatened to never let them see you again, or otherwise harmed them?</inlineHelpText>
        <label>Has your partner taken/hurt your kids?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Have_3_of_your_friends_been_arrested__c</fullName>
        <inlineHelpText>Have 3 or more of your friends ever been arrested and/or spent time in jail?</inlineHelpText>
        <label>Have 3+ of your friends been arrested?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_any_of_your_friends_been_arrested__c</fullName>
        <inlineHelpText>Have any of your friends ever been arrested and/or spent time in jail?</inlineHelpText>
        <label>Have any of your friends been arrested?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Highest_Level_of_Education_Completed__c</fullName>
        <label>Highest Level of Education Completed</label>
        <picklist>
            <picklistValues>
                <fullName>No Formal Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grammar School (K - Grade 6)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior High School (Grades 7 - 9)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High School (Grades 10 - 12 or GED)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business, vocational, or technical training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some college but no degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate&apos;s Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachelor&apos;s Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Leisure_Recreation_Notes__c</fullName>
        <label>Leisure/Recreation Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mental_Health_Issues__c</fullName>
        <label>Mental Health Issues</label>
        <picklist>
            <picklistValues>
                <fullName>Antisocial Personality Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anxiety Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bipolar Affective Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borderline Personality Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impulse Control Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Depressive Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paranoid Personality Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychotic Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schizoaffective Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schizophrenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thought/personality/adjustment disorders</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Neurodevelopmental_Disorders__c</fullName>
        <label>Neurodevelopmental Disorders</label>
        <picklist>
            <picklistValues>
                <fullName>Intellectual Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autism Spectrum Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attention Deficit Hyperactivity (ADHD)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Other_Mental_Health_Issues__c</fullName>
        <label>Other Mental Health Issues</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Neurodevelopmental_Disorders__c</fullName>
        <label>Other Neurodevelopmental Disorders</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_forced_you_to_do_something__c</fullName>
        <inlineHelpText>Has your intimate partner ever forced you to do something you did not want to do?</inlineHelpText>
        <label>Partner forced you to do something?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_hurt_pets_destroyed_objects__c</fullName>
        <inlineHelpText>Has your intimate partner ever hurt your pets or destroyed your clothing, objects in your home, or something you especially cared about?</inlineHelpText>
        <label>Partner hurt pets/destroyed objects?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suspended_or_expelled_at_least_once__c</fullName>
        <label>Suspended or expelled at least once?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_Drugs_Used_Other__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Update Drugs Used (Other)</label>
        <type>TextArea</type>
    </fields>
    <label>aCCM Orientation</label>
    <nameField>
        <displayFormat>COA-{0000}</displayFormat>
        <label>CCM Orientation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>aCCM Orientation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>